2008-03-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* win32/common/libgstnetbuffer.def:
	Add new symbol gst_netaddress_equal. Fixes bug #521743.

2008-03-11  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* win32/common/config.h:
	0.10.17.3 pre-release

2008-03-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_create):
	Fix duration when no clock was provided. Fixes #520300.

2008-03-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete  <tester at tester ca>

	* docs/libs/gst-plugins-base-libs-sections.txt:
	* gst-libs/gst/netbuffer/gstnetbuffer.c: (gst_netaddress_equal):
	* gst-libs/gst/netbuffer/gstnetbuffer.h:
	Add trivial function to compare GstNetAddress. See #520626.
	API: GstNetBuffer::gst_netaddress_equal

2008-03-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/tcp/gstmultifdsink.c: (gst_multi_fd_sink_class_init):
	Update mode property docs, it's deprecated now.

2008-03-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtsp/gstrtspconnection.c:
	(gst_rtsp_connection_create):
	* gst/tcp/gstmultifdsink.c: (gst_fdset_mode_get_type),
	(gst_multi_fd_sink_class_init), (gst_multi_fd_sink_start):
	* gst/tcp/gstmultifdsink.h:
	* gst/tcp/gsttcpclientsrc.c: (gst_tcp_client_src_start):
	* gst/tcp/gsttcpserversrc.c: (gst_tcp_server_src_start):
	Remove GstPollMode from gstpoll constructor.

2008-03-04  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* win32/common/config.h:
	0.10.17.2 pre-release

2008-03-03  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/Makefile.am:
	GST_PLUGINS_ALL correctly lists subparse and tcp now, don't distclean
	them twice

	* win32/common/libgstinterfaces.def:
	* win32/common/libgstrtp.def:
	Add new API to the defs

2008-03-03  Peter Kjellerstedt  <pkj@axis.com>

	Patch by: Mersad Jelacic  <mersad at axis dot com>

	* gst-libs/gst/rtp/gstbasertpaudiopayload.c:
	* gst-libs/gst/rtp/gstbasertpaudiopayload.h: